--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,13 @@
             "src": "/(.*)",
             "dest": "app/main.py"
         }
-    ]
+    ],
+    
+    "functions": {
+        "api/**": {
+        "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
+        }
+    }
+    
+      
 }
