update vercel file

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -3,7 +3,7 @@
 
     "functions": {
 
-        "app/**": {
+        "api/**": {
 
         "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
         }
