--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,8 @@
     "version": 2,
     "functions": {
         "api/index.py": {
-            "runtime": "python3.9"
+            "runtime": "python3.9",
+            "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
         }
     },
     "routes": [
