--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "functions": {
         "api/index.py": {
-            "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
+            "excludeFiles": "{.next,*.cache,node_modules,public,app,__pycache__,.venv,venv,env,.git,.vercel,upload,alembic,*.pyc,*.pyo,*.pyd,.pytest_cache,.coverage,htmlcov,dist,build,*.egg-info}/**"
         }
     },
     "routes": [
