--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,14 +1,14 @@
 {
     "version": 2,
     "functions": {
-        "api/index.py": {
+        "app/main.py": {
             "excludeFiles": "{.next,*.cache,node_modules,public,app,__pycache__,.venv,venv,env,.git,.vercel,upload,alembic,*.pyc,*.pyo,*.pyd,.pytest_cache,.coverage,htmlcov,dist,build,*.egg-info}/**"
         }
     },
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/index.py"
+            "dest": "app/main.py"
         }
     ]
 }
