add log for backend

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -10,7 +10,10 @@
             "src": "/(.*)",
             "dest": "api/index.py"
         }
-    ]
+    ],
+    
+    "buildCommand": "python build_script.py"
+    
 }
 
 
