--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,103 @@
-fastapi[standard]>=0.114.2,<1.0.0
-python-multipart>=0.0.7,<1.0.0
-email-validator>=2.1.0.post1,<3.0.0.0
-passlib[bcrypt]>=1.7.4,<2.0.0
-tenacity>=8.2.3,<9.0.0
-pydantic>2.0
-emails>=0.6,<1.0
-jinja2>=3.1.4,<4.0.0
-alembic>=1.12.1,<2.0.0
-httpx>=0.25.1,<1.0.0
-psycopg[binary]>=3.1.13,<4.0.0
-sqlmodel>=0.0.21,<1.0.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+alembic==1.16.1
+annotated-types==0.7.0
+anyio==4.9.0
+async-timeout==4.0.3
+attrs==25.3.0
 bcrypt==4.0.1
-pydantic-settings>=2.2.1,<3.0.0
-sentry-sdk
-pyjwt>=2.8.0,<3.0.0
-jsbeautifier
-pytz
-docx2txt 
+cachetools==6.0.0
+certifi==2025.4.26
+chardet==5.2.0
+charset-normalizer==3.4.2
+click==8.2.1
+cssselect==1.3.0
+cssutils==2.11.1
+dataclasses-json==0.6.7
+distro==1.9.0
+dnspython==2.7.0
+docx2txt==0.9
+EditorConfig==0.17.1
+email_validator==2.2.0
+emails==0.6
+exceptiongroup==1.3.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+frozenlist==1.7.0
+groq==0.28.0
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+Jinja2==3.1.6
+jiter==0.10.0
+jsbeautifier==1.15.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.25
+langchain-community==0.3.25
+langchain-core==0.3.65
+langchain-openai==0.3.23
+langchain-text-splitters==0.3.8
+langsmith==0.3.45
+lxml==5.4.0
+Mako==1.3.10
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+more-itertools==10.7.0
+multidict==6.4.4
+mypy_extensions==1.1.0
+numpy==2.2.6
+ollama==0.5.1
+openai==1.87.0
+orjson==3.10.18
+packaging==24.2
+passlib==1.7.4
+premailer==3.10.0
+propcache==0.3.2
+psycopg==3.2.9
+psycopg-binary==3.2.9
+psycopg2-binary==2.9.10
+pydantic==2.11.5
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
+Pygments==2.19.1
+PyJWT==2.10.1
+pypdf==5.8.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.4
+requests-toolbelt==1.0.0
+rich==14.0.0
+rich-toolkit==0.14.7
+sentry-sdk==1.45.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+sqlmodel==0.0.24
+starlette==0.46.2
+tenacity==8.5.0
+tiktoken==0.9.0
+tomli==2.2.1
+tqdm==4.67.1
+typer==0.16.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+urllib3==2.4.0
+uvicorn==0.34.3
+uvloop==0.21.0
+watchfiles==1.0.5
+websockets==15.0.1
+yarl==1.20.1
+zstandard==0.23.0
