--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,15 @@
 {
     "version": 2,
-    "functions": {
-        "api/index.py": {
-            "excludeFiles": "{.next,*.cache,node_modules,public,app,__pycache__,.venv,venv,env,.git,.vercel,upload,alembic,*.pyc,*.pyo,*.pyd,.pytest_cache,.coverage,htmlcov,dist,build,*.egg-info}/**"
+    "builds": [
+        {
+            "src": "app/main.py",
+            "use": "@vercel/python"
         }
-    },
+    ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/index.py"
+            "dest": "app/main.py"
         }
     ]
 }
-
-
