--- a/backend/.env_online
+++ b/backend/.env_online
@@ -18,4 +18,4 @@ ACCESS_TOKEN_EXPIRE_MINUTES=30
 OPENAI_API_KEY="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"
 GROQ_API_BASE = "https://api.groq.com/openai/v1"
 
-BACKEND_CORS_ORIGINS=["http://localhost:5173","http://localhost:3000"]
+BACKEND_CORS_ORIGINS=["http://localhost:5173","http://localhost:3000","https://ransky-frontend.onrender.com"]
